<resources>
    <string name="app_name">短信铃声提醒</string>
    <string name="phone_label">匹配手机号</string>
    <string name="sms_label">匹配短信内容</string>
    <string name="section_match_rule">匹配规则</string>
    <string name="section_mock_test">模拟短信</string>
    <string name="section_alert_settings">提醒设置</string>
    <string name="section_system_settings">系统设置</string>
    <string name="mock_phone_label">模拟号码</string>
    <string name="mock_sms_label">模拟内容</string>
    <string name="test">模拟测试</string>
    <string name="save">保存</string>
    <string name="choose_ringtone">选择铃声</string>
    <string name="stop_playback">停止播放</string>
    <string name="request_sms_permission">申请短信权限</string>
    <string name="request_notification_permission">申请通知权限</string>
    <string name="volume">音量</string>
    <string name="vibrate_when_playing">播放时震动</string>
    <string name="hide_from_recents">最近任务中隐藏</string>
    <string name="sms_observer">后台短信监听（小米手机必须开启）</string>
</resources>
